# softwareupdate_project

./: .qmake.stash  CMakeLists.txt  Makefile.Debug  Makefile.Release  SCP_UPLOAD_FIX.md  SSH_Setup_Guide.md  SSH密钥删除功能说明.md  SSH密钥生成修复说明.md  SSH密钥部署密码优化说明.md  build.bat  debug_scp.ps1  install_ssh_key.py  install_sshpass.bat  machine_auth.key  machine_code_PC-202303100956.txt  run.bat
docs/: README.md  增强设置功能说明.md  解决控制台显示问题.md  项目结构说明.md
maccode_all/: machine_code_PC-202303100956.txt  machine_code_PC-202309021153.txt
mackey_all/: machine_auth.key
packaged/: README.md
scripts/: build.bat  build_all_tools.bat  build_auth.bat  build_auth_simple.bat  build_cmake_no_console.bat  build_complete_settings.bat  build_enhanced_settings.bat  build_generate_auth.bat  build_machine_code.bat  build_no_console.bat  build_with_remote_command.bat  build_with_settings.bat  build_with_upgrade_feature.bat  create_auth.bat  deploy_qt_apps.bat  deploy_single_app.bat  encoding_diagnosis.bat  fix_encoding.bat  install_python_deps.bat  install_python_deps.sh  launcher.bat  requirements.txt  run.bat  run_auth.bat  run_generate_auth.bat  run_machine_code.bat  run_tools.bat  run_tools.ps1  run_tools_ansi.bat  run_tools_fix.bat  start.bat  test_chinese_display.bat
src/: QtProject.pro  QtProject_resource.rc  auth_tool.cpp  auth_tool.pro  crypto_utils.cpp  crypto_utils.h  generate_auth.cpp  generate_auth.pro  get_machine_code.cpp  get_machine_code.pro  ku5p_upgrade.cpp  main.cpp  main.qss  mainwindow.cpp  mainwindow.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  test_double_compass.cpp  (+1 more)
(+12 files in other folders)
